# rust-lambda

./: .gitignore
rust_serverless/: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
rust_serverless/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
rust_serverless/.serverless/invokeLocal/artifact/: bootstrap
rust_serverless/src/: example_request.json  main.rs
